--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "next": "^15.2.4",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "catalog:",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "catalog:",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
     "react-share": "^5.2.2",
@@ -107,8 +107,8 @@
     "@types/lint-staged": "^13.3.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.14",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@types/react-timeago": "^4.1.7",
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "^2.15.0",
