--- a/packages/component-library/tsconfig.json
+++ b/packages/component-library/tsconfig.json
@@ -1,6 +1,7 @@
 {
-  "extends": "@maw/typescript-config/react-library",
+  "extends": "@maw/typescript-config/configs/react-library.json",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "include": ["src"],
 }
