--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -1,15 +1,15 @@
 {
+  "private": true,
   "name": "@maw/content-api",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
   "scripts": {
+    "build": "pnpm build:schema && pnpm build:index",
     "build:index": "tsx ./scripts/build-index.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
-    "build": "pnpm build:schema && pnpm build:index",
-    "type-check": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "marked": "^15.0.7",
@@ -19,11 +19,11 @@
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@maw/eslint-config": "workspace:*",
+    "@maw/typescript-config": "workspace:*",
     "@types/sanitize-html": "^2.15.0",
     "sharp": "^0.33.5",
     "tsx": "catalog:",
-    "typescript": "catalog:",
-    "@maw/typescript-config": "workspace:*",
-    "@maw/eslint-config": "workspace:*"
+    "typescript": "catalog:"
   }
 }
