--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,26 +1,30 @@
 {
+  "private": true,
   "name": "@maw/component-library",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
   "scripts": {
-    "type-check": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "marked": "^15.0.7",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "sanitize-html": "^2.15.0",
     "yaml": "^2.7.1",
     "zod": "^3.24.2",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@maw/eslint-config": "workspace:*",
+    "@maw/typescript-config": "workspace:*",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@types/sanitize-html": "^2.15.0",
     "sharp": "^0.33.5",
     "tsx": "catalog:",
-    "typescript": "catalog:",
-    "@maw/typescript-config": "workspace:*",
-    "@maw/eslint-config": "workspace:*"
+    "typescript": "catalog:"
   }
 }
