--- a/packages/content-api/tsconfig.json
+++ b/packages/content-api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@maw/typescript-config/base",
+  "extends": "@maw/typescript-config/configs/base.json",
   "compilerOptions": {
     "baseUrl": "."
   }
