--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,6 +1,4 @@
 {
   "extends": "@maw/typescript-config/configs/base.json",
-  "compilerOptions": {
-    "baseUrl": "."
-  },
+  "include": ["src"],
 }
