--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,7 @@ packages:
 catalog:
   typescript: 5.8.3
   tsx: ^4.19.3
+  react: ^19.1.0
+  react-dom: ^19.1.0
+  "@types/react-dom": ^19.0.4
+  "@types/react": ^19.0.12
