feat: cleanup root deps and add them whre needed

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@maw/typescript-config/configs/nextjs.json",
+  "compilerOptions": {
+    "baseUrl": "."
+  },
   "include": [
     "**/*.ts",
     "**/*.tsx",
