--- a/package.json
+++ b/package.json
@@ -27,111 +27,20 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "build:article-index": "tsx ./scripts/build-article-index.ts",
-    "build:manifest": "tsx ./scripts/build-manifest.ts",
-    "build:schema": "tsx ./scripts/build-json-schema.ts",
-    "build:storybook": "storybook build",
-    "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:deployment-meta",
-    "build": "pnpm run build:artifacts && next build",
-    "dev": "pnpm run build:artifacts && next dev --experimental-https",
-    "lint:fix": "next lint --fix",
-    "lint": "next lint",
+    "build": "turbo run build",
+    "check-types": "turbo run check-types",
+    "dev": "turbo run dev",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
     "prepare": "husky",
-    "start": "pnpm run build:artifacts && next start",
-    "storybook:dev": "storybook dev -p 6006",
-    "test:ci": "jest --ci",
-    "test:coverage": "jest --coverage",
-    "test:once": "jest",
     "test:e2e": "playwright test",
-    "test": "jest",
-    "type-check": "tsc --project tsconfig.json --pretty --noEmit"
-  },
-  "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/bundle-analyzer": "^15.2.4",
-    "@next/mdx": "^15.2.4",
-    "@sentry/nextjs": "^9.10.1",
-    "@vercel/analytics": "^1.5.0",
-    "classnames": "^2.5.1",
-    "color": "^5.0.0",
-    "eslint-config-next": "^15.2.4",
-    "html-react-parser": "^5.2.2",
-    "marked": "^15.0.7",
-    "next": "^15.2.4",
-    "next-intl": "^4.0.2",
-    "next-themes": "^0.4.6",
-    "react": "catalog:",
-    "react-confetti": "^6.4.0",
-    "react-dom": "catalog:",
-    "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.55.0",
-    "react-share": "^5.2.2",
-    "react-timeago": "^8.0.0",
-    "react-use": "^17.6.0",
-    "remark-gfm": "^4.0.1",
-    "rtl-detect": "^1.1.2",
-    "sanitize-html": "^2.15.0",
-    "yaml": "^2.7.1",
-    "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.5",
-    "zustand": "^5.0.3"
+    "test:watch": "jest --watch",
+    "test": "turbo run test"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.23.0",
-    "@next/eslint-plugin-next": "^15.2.4",
-    "@playwright/test": "^1.51.1",
-    "@storybook/addon-essentials": "^8.6.11",
-    "@storybook/addon-interactions": "^8.6.11",
-    "@storybook/addon-links": "^8.6.11",
-    "@storybook/addon-onboarding": "^8.6.11",
-    "@storybook/addon-themes": "^8.6.11",
-    "@storybook/blocks": "^8.6.11",
-    "@storybook/nextjs": "^8.6.11",
-    "@storybook/react": "^8.6.11",
-    "@storybook/test": "^8.6.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
-    "@types/jest": "^29.5.14",
-    "@types/lint-staged": "^13.3.0",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^22.13.14",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
-    "@types/react-timeago": "^4.1.7",
-    "@types/rtl-detect": "^1.0.3",
-    "@types/sanitize-html": "^2.15.0",
-    "autoprefixer": "^10.4.21",
-    "chromatic": "^11.27.0",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
-    "eslint-plugin-storybook": "^0.12.0",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "favicons": "^7.2.0",
+    "typescript": "catalog:",
+    "turbo": "2.5.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.5.0",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "sharp": "^0.33.5",
-    "storybook": "^8.6.11",
-    "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "5.8.2",
-    "typescript-eslint": "^8.28.0"
-  },
-  "peerDependencies": {
-    "express": "^5.1.0"
+    "@playwright/test": "^1.51.1"
   }
 }
