--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -15,6 +15,8 @@
     "marked": "^15.0.7",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "react-fast-marquee": "^1.6.5",
+    "react-hook-form": "7.55.0",
     "sanitize-html": "^2.15.0",
     "yaml": "^2.7.1",
     "zod": "^3.24.2",
@@ -24,6 +26,7 @@
     "@maw/eslint-config": "workspace:*",
     "@maw/typescript-config": "workspace:*",
     "@maw/utils": "workspace:*",
+    "@types/node": "^22.13.14",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@types/sanitize-html": "^2.15.0",
