--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "private": false,
+  "private": true,
   "name": "themostannoyingwebsite",
   "version": "0.8.0",
   "license": "MIT",
@@ -25,7 +25,6 @@
     "dev": "pnpm run build:artifacts && next dev --experimental-https",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prepare": "husky",
     "start": "pnpm run build:artifacts && next start",
     "storybook:dev": "storybook dev -p 6006",
     "test": "jest",
@@ -112,7 +111,6 @@
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "favicons": "^7.2.0",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
@@ -129,6 +127,5 @@
   "funding": {
     "type": "individual",
     "url": "https://www.onet.dev/donate"
-  },
-  "packageManager": "pnpm@10.0.0"
+  }
 }
