--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -9,7 +9,7 @@
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "type-check": "tsc --noEmit"
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "marked": "^15.0.7",
@@ -22,7 +22,7 @@
     "@maw/eslint-config": "workspace:*",
     "@maw/typescript-config": "workspace:*",
     "@types/sanitize-html": "^2.15.0",
-    "eslint": "^9.23.0",
+    "eslint": "catalog:",
     "sharp": "^0.33.5",
     "tsx": "catalog:",
     "typescript": "catalog:"
