--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -9,10 +9,10 @@
     "./react-internal": "./configs/react-internal.mjs"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "catalog:",
     "@maw/typescript-config": "workspace:*",
     "@next/eslint-plugin-next": "^15.2.1",
-    "eslint": "^9.23.0",
+    "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.4",
