--- a/packages/jest-preset/package.json
+++ b/packages/jest-preset/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@maw/jest-preset",
   "version": "1.0.0",
+  "type": "module",
   "exports": {
     "./base": "./src/base.ts",
     "./setup": "./src/setup.ts"
@@ -9,7 +10,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "type-check": "tsc --noEmit"
+    "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@maw/eslint-config": "workspace:*",
@@ -18,6 +19,7 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.1"
+    "ts-jest": "^29.3.1",
+    "eslint": "^9.23.0"
   }
 }
