--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,9 +3,11 @@ packages:
   - "packages/*"
 
 catalog:
-  typescript: 5.8.3
-  tsx: ^4.19.3
-  react: ^19.1.0
-  react-dom: ^19.1.0
   "@types/react-dom": ^19.0.4
   "@types/react": ^19.0.12
+  "@eslint/js": 9.24.0
+  eslint: 9.24.0
+  react-dom: ^19.1.0
+  react: ^19.1.0
+  tsx: ^4.19.3
+  typescript: 5.8.3
