--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@maw/typescript-config",
+  "name": "@maw/tsconfig",
   "version": "1.0.0",
   "license": "MIT",
   "publishConfig": {
