--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,31 +2,15 @@
   "private": true,
   "name": "themostannoyingwebsite",
   "version": "0.8.0",
-  "license": "MIT",
-  "author": "Konrad Koller <info@onet.dev> (https://onet.dev)",
-  "homepage": "https://themostannoyingwebsite.com",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/onetdev/themostannoyingwebsite.com"
-  },
-  "bugs": {
-    "url": "https://github.com/onetdev/themostannoyingwebsite.com/issues",
-    "email": "info@themostannoyingwebsite.com"
-  },
   "type": "module",
   "scripts": {
-    "build": "pnpm run build:artifacts && next build",
-    "build:article-index": "tsx ./scripts/build-article-index.ts",
-    "build:artifacts": "pnpm run build:article-index && pnpm run build:schema && pnpm run build:deployment-meta",
+    "build": "pnpm run build:deployment-meta && next build",
     "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
-    "build:schema": "tsx ./scripts/build-json-schema.ts",
-    "build:storybook": "storybook build",
-    "dev": "pnpm run build:artifacts && next dev --experimental-https",
+    "dev": "pnpm run build:deployment-meta && next dev --experimental-https",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "start": "pnpm run build:artifacts && next start",
-    "storybook:dev": "storybook dev -p 6006",
+    "start": "pnpm run build:deployment-meta && next start",
     "test": "jest",
     "test:ci": "jest --ci",
     "test:coverage": "jest --coverage",
@@ -75,23 +59,14 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.23.0",
     "@maw/eslint-config": "workspace:^",
     "@maw/jest-preset": "workspace:^",
-    "@maw/typescript-config": "workspace:",
+    "@maw/tsconfig": "workspace:^",
+    "@maw/tailwind": "workspace:^",
     "@next/eslint-plugin-next": "^15.2.4",
     "@playwright/test": "^1.51.1",
-    "@storybook/addon-essentials": "^8.6.11",
-    "@storybook/addon-interactions": "^8.6.11",
-    "@storybook/addon-links": "^8.6.11",
-    "@storybook/addon-onboarding": "^8.6.11",
-    "@storybook/addon-themes": "^8.6.11",
-    "@storybook/blocks": "^8.6.11",
-    "@storybook/nextjs": "^8.6.11",
-    "@storybook/react": "^8.6.11",
-    "@storybook/test": "^8.6.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -111,7 +86,6 @@
     "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
-    "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "favicons": "^7.2.0",
     "jest": "^29.7.0",
@@ -119,15 +93,10 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "sharp": "^0.33.5",
-    "storybook": "^8.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "catalog:",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "5.8.2",
     "typescript-eslint": "^8.28.0"
-  },
-  "funding": {
-    "type": "individual",
-    "url": "https://www.onet.dev/donate"
   }
 }
