--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "catalog:",
-    "@maw/typescript-config": "workspace:*",
+    "@maw/tsconfig": "workspace:*",
     "@next/eslint-plugin-next": "^15.2.1",
     "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
