--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,7 +10,8 @@
   },
   "exports": {
     ".": "./src/index.ts",
-    "./utils": "./src/utils/index.ts"
+    "./utils": "./src/utils/index.ts",
+    "./globals.css": "./src/styles/globals.css"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@maw/eslint-config": "workspace:*",
-    "@maw/typescript-config": "workspace:*",
+    "@maw/tsconfig": "workspace:*",
     "@maw/utils": "workspace:*",
     "@types/node": "^22.13.14",
     "@types/react": "catalog:",
@@ -37,6 +38,8 @@
     "eslint": "catalog:",
     "sharp": "^0.33.5",
     "tsx": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "@storybook/react": "^8.6.12",
+    "@storybook/test": "^8.6.12"
   }
 }
