chore: progress on tailwind and storybook integration

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,44 +1,46 @@
 dependencies:
   - changed-files:
     - any-glob-to-any-file:
-      - package.json
       - ./**/package.json
-      - pnpm-lock.yaml
-      - .nvmrc
+      - ./**/package.json
+      - ./**/pnpm-lock.yaml
       - .asdfrc
+      - .nvmrc
       - .tool-versions
 
 documentation:
   - changed-files:
     - any-glob-to-any-file:
-      - README.md
       - ./**/README.md
+      - .github/ISSUE_TEMPLATE/*
       - .github/pull_request_template.md
+      - README.md
 
 storybook:
   - changed-files:
     - any-glob-to-any-file:
-      - .storybook/**
+      - apps/ui-docs/.storybook/**
       - ./**.stories.ts
       - ./**.stories.tsx
 
 ci/cd:
   - changed-files:
     - any-glob-to-any-file:
-      - .github/workflows/**
-      - .github/labeler.yml
+      - .github/auto-assign.yml
       - .github/CODEOWNERS
+      - .github/labeler.yml
+      - .github/workflows/**
       - next.config.js
 
 content:
   - changed-files:
     - any-glob-to-any-file:
-      - assets/**
       - apps/web/public/**
+      - assets/**
 
 ui:
   - changed-files:
     - any-glob-to-any-file:
-      - packages/component-library/**
       - apps/web/src/components/**.tsx
       - apps/web/src/features/**/components/**.tsx
+      - packages/ui/**
