--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -1,10 +1,10 @@
 {
+  "private": true,
   "name": "ui-docs",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "storybook dev -p 6006",
-    "build": "storybook build"
+    "build": "storybook build",
+    "dev": "storybook dev -p 6006"
   },
   "dependencies": {
     "@maw/ui": "workspace:*",
@@ -13,20 +13,23 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@maw/eslint-config": "workspace:^",
     "@maw/tailwind": "workspace:*",
+    "@maw/tsconfig": "workspace:*",
     "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
     "@storybook/addon-themes": "^8.6.11",
     "@storybook/blocks": "^8.6.12",
-    "@storybook/experimental-addon-test": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "^9",
     "eslint-plugin-storybook": "^0.12.0",
     "playwright": "^1.51.1",
+    "postcss": "catalog:",
+    "autoprefixer": "catalog:",
     "storybook": "^8.6.12",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
