--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,6 +7,7 @@
     "build": "pnpm run build:deployment-meta && next build",
     "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "dev": "pnpm run build:deployment-meta && next dev --experimental-https",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -15,17 +16,16 @@
     "test:ci": "jest --ci",
     "test:coverage": "jest --coverage",
     "test:e2e": "playwright test",
-    "test:once": "jest",
-    "check-types": "tsc --project tsconfig.json --pretty --noEmit"
+    "test:once": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mdx-js/loader": "^3.1.0",
+    "@maw/content-api": "workspace:^",
     "@maw/ui": "workspace:^",
     "@maw/utils": "workspace:^",
-    "@maw/content-api": "workspace:^",
+    "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/bundle-analyzer": "^15.2.4",
     "@next/mdx": "^15.2.4",
@@ -63,8 +63,8 @@
     "@eslint/js": "^9.23.0",
     "@maw/eslint-config": "workspace:^",
     "@maw/jest-preset": "workspace:^",
-    "@maw/tsconfig": "workspace:^",
     "@maw/tailwind": "workspace:^",
+    "@maw/tsconfig": "workspace:^",
     "@next/eslint-plugin-next": "^15.2.4",
     "@playwright/test": "^1.51.1",
     "@testing-library/dom": "^10.4.0",
@@ -81,8 +81,7 @@
     "@types/react-timeago": "^4.1.7",
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "^2.15.0",
-    "autoprefixer": "^10.4.21",
-    "chromatic": "^11.27.0",
+    "autoprefixer": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
@@ -90,13 +89,13 @@
     "favicons": "^7.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.3",
+    "postcss": "catalog:",
     "prettier": "^3.5.3",
     "sharp": "^0.33.5",
     "tailwindcss": "catalog:",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "5.8.2",
+    "tsx": "catalog:",
+    "typescript": "catalog:",
     "typescript-eslint": "^8.28.0"
   }
 }
