--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -12,9 +12,9 @@
     "build": "pnpm build:schema && pnpm build:index",
     "build:index": "tsx ./scripts/build-index.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
+    "check-types": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "check-types": "tsc --noEmit"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "marked": "^15.0.7",
