--- a/packages/jest-preset/package.json
+++ b/packages/jest-preset/package.json
@@ -8,18 +8,18 @@
     "./setup": "./src/setup.ts"
   },
   "scripts": {
+    "check-types": "tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "check-types": "tsc --noEmit"
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "@maw/eslint-config": "workspace:*",
     "@maw/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
+    "eslint": "^9.23.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.1",
-    "eslint": "^9.23.0"
+    "ts-jest": "^29.3.1"
   }
 }
