--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "scripts": {
     "build": "storybook build",
-    "dev": "storybook dev -p 6006"
+    "check-types": "tsc --noEmit",
+    "dev": "storybook dev -p 6006",
+    "lint": "next lint"
   },
   "dependencies": {
     "@maw/ui": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:"
+    "next": "catalog:",
+    "react-dom": "catalog:",
+    "react": "catalog:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -17,19 +20,21 @@
     "@maw/tailwind": "workspace:*",
     "@maw/tsconfig": "workspace:*",
     "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
     "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-themes": "^8.6.11",
+    "@storybook/addon-themes": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
+    "@storybook/nextjs": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@types/node": "^20",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
-    "eslint": "^9",
-    "eslint-plugin-storybook": "^0.12.0",
-    "playwright": "^1.51.1",
-    "postcss": "catalog:",
     "autoprefixer": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-storybook": "^0.12.0",
+    "playwright": "catalog:",
+    "postcss": "catalog:",
     "storybook": "^8.6.12",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
