--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,6 +67,7 @@
     "@maw/tsconfig": "workspace:^",
     "@next/eslint-plugin-next": "^15.2.4",
     "@playwright/test": "^1.51.1",
+    "@tailwindcss/postcss": "catalog:",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -81,16 +82,15 @@
     "@types/react-timeago": "^4.1.7",
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "^2.15.0",
-    "autoprefixer": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
-    "eslint-plugin-tailwindcss": "^3.18.0",
     "favicons": "^7.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "catalog:",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.33.5",
     "tailwindcss": "catalog:",
     "ts-node": "^10.9.2",
