--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,6 +41,7 @@
     "@types/sanitize-html": "^2.15.0",
     "eslint": "catalog:",
     "sharp": "^0.33.5",
+    "tailwindcss": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:"
   }
