--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,15 +4,15 @@ packages:
 
 catalog:
   "@eslint/js": 9.24.0
+  "@tailwindcss/postcss": 4.1.3
   "@types/react-dom": ^19.0.4
   "@types/react": ^19.0.12
-  autoprefixer: 10.4.21
   eslint: 9.24.0
   next: 15.2.4
   playwright: 1.51.1
   postcss: 8.5.3
   react-dom: ^19.1.0
   react: ^19.1.0
-  tailwindcss: 3.4.17
+  tailwindcss: 4.1.3
   tsx: ^4.19.3
   typescript: 5.8.3
