--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,4 +30,4 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm run build:artifacts
       - run: pnpm run lint
-      - run: pnpm run type-check
+      - run: pnpm run check-types
