--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
-  "name": "themostannoyingwebsite",
+  "name": "@maw/web",
   "version": "0.8.0",
   "type": "module",
   "scripts": {
     "build": "pnpm run build:deployment-meta && next build",
+    "build:metadata": "pnpm run build:deployment-meta && pnpm run build:manifest",
     "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
     "build:manifest": "tsx ./scripts/build-manifest.ts",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
@@ -35,7 +36,7 @@
     "eslint-config-next": "^15.2.4",
     "html-react-parser": "^5.2.2",
     "marked": "^15.0.7",
-    "next": "^15.2.4",
+    "next": "catalog:",
     "next-intl": "^4.0.2",
     "next-themes": "^0.4.6",
     "react": "catalog:",
@@ -58,8 +59,9 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@jest/globals": "catalog:",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "catalog:",
     "@maw/eslint-config": "workspace:^",
     "@maw/jest-preset": "workspace:^",
     "@maw/tsconfig": "workspace:^",
@@ -71,7 +73,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "catalog:",
     "@types/lint-staged": "^13.3.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.13.14",
@@ -84,14 +86,15 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "favicons": "^7.2.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "catalog:",
+    "jest-environment-jsdom": "catalog:",
     "postcss": "catalog:",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.33.5",
     "tailwindcss": "catalog:",
-    "ts-node": "^10.9.2",
+    "ts-node": "catalog:",
+    "ts-jest": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "^8.28.0"
