--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "scripts": {
     "build": "turbo run build",
+    "build:metadata": "turbo run build:metadata --filter=@maw/content-api --filter=@maw/web",
     "check-types": "turbo run check-types",
     "dev": "turbo run dev",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
