--- a/packages/content-api/package.json
+++ b/packages/content-api/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "build": "pnpm build:schema && pnpm build:index",
+    "build:metadata": "pnpm build:schema && pnpm build:index",
     "build:index": "tsx ./scripts/build-index.ts",
     "build:schema": "tsx ./scripts/build-json-schema.ts",
     "check-types": "tsc --noEmit",
