--- a/packages/jest-preset/package.json
+++ b/packages/jest-preset/package.json
@@ -2,7 +2,6 @@
   "private": true,
   "name": "@maw/jest-preset",
   "version": "1.0.0",
-  "type": "module",
   "exports": {
     "./base": "./src/base.ts",
     "./setup": "./src/setup.ts"
@@ -16,10 +15,10 @@
     "@maw/eslint-config": "workspace:*",
     "@maw/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/jest": "^29.5.14",
-    "eslint": "^9.23.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.1"
+    "@types/jest": "catalog:",
+    "eslint": "catalog:",
+    "jest": "catalog:",
+    "jest-environment-jsdom": "catalog:",
+    "ts-jest": "catalog:"
   }
 }
