--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,21 +15,20 @@
     "lint:fix": "eslint . --fix",
     "test": "jest"
   },
-  "types": "./src/index.d.ts",
   "dependencies": {
     "sanitize-html": "^2.15.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
+    "@jest/globals": "catalog:",
     "@maw/eslint-config": "workspace:*",
     "@maw/jest-preset": "workspace:*",
     "@maw/tsconfig": "workspace:*",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "catalog:",
     "@types/sanitize-html": "^2.15.0",
-    "eslint": "^9.23.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.1",
+    "eslint": "catalog:",
+    "jest": "catalog:",
+    "jest-environment-jsdom": "catalog:",
+    "ts-jest": "catalog:",
     "typescript": "catalog:"
   }
 }
