--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,16 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "dependsOn": ["^build", "build:metadata"],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env*"
+      ],
       "outputs": [
         ".next/**",
         "!.next/cache/**",
-        "storybook-static/**"
+        "storybook-static/**",
+        "data/**"
       ]
     },
     "lint:fix": {
@@ -40,6 +44,7 @@
     "NEXT_PUBLIC_SENTRY_CLIENT_DSN",
     "NEXT_PUBLIC_SENTRY_ENABLED",
     "NEXT_PUBLIC_SITE_URL",
+    "NEXT_RUNTIME",
     "SENTRY_AUTH_TOKEN",
     "SENTRY_EDGE_DSN",
     "SENTRY_SERVER_DSN",
