--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,14 +4,15 @@
   "version": "0.8.0",
   "type": "module",
   "scripts": {
-    "build": "pnpm run build:deployment-meta && next build",
-    "build:metadata": "pnpm run build:deployment-meta && pnpm run build:manifest",
+    "build": "pnpm run build:deployment-meta && pnpm run publish:assets && next build",
+    "build:metadata": "pnpm run build:deployment-meta && pnpm run build:web-manifest",
     "build:deployment-meta": "tsx ./scripts/build-deployment-meta.ts",
-    "build:manifest": "tsx ./scripts/build-manifest.ts",
+    "build:web-manifest": "tsx ./scripts/build-web-manifest.ts",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "dev": "pnpm run build:deployment-meta && next dev --experimental-https",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
+    "publish:assets": "tsx ./scripts/publish-assets.ts",
     "start": "pnpm run build:deployment-meta && next start",
     "test": "jest",
     "test:ci": "jest --ci",
@@ -50,18 +51,15 @@
     "remark-gfm": "^4.0.1",
     "rtl-detect": "^1.1.2",
     "sanitize-html": "^2.15.0",
-    "yaml": "^2.7.1",
-    "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.5",
     "zustand": "^5.0.3"
   },
   "peerDependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@jest/globals": "catalog:",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "catalog:",
+    "@jest/globals": "catalog:",
     "@maw/eslint-config": "workspace:^",
     "@maw/jest-preset": "workspace:^",
     "@maw/tsconfig": "workspace:^",
@@ -93,8 +91,8 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.33.5",
     "tailwindcss": "catalog:",
-    "ts-node": "catalog:",
     "ts-jest": "catalog:",
+    "ts-node": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
     "typescript-eslint": "^8.28.0"
