feat: update readme after monorepo upgrade

--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "ui-docs",
+  "name": "@maw/ui-docs",
   "version": "1.0.0",
   "scripts": {
     "build": "storybook build",
