--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,7 +67,7 @@
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "catalog:",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "catalog:",
     "@testing-library/react": "^16.2.0",
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
