--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,19 +6,20 @@ catalog:
   "@eslint/js": 9.24.0
   "@jest/globals": ^29.7.0
   "@tailwindcss/postcss": 4.1.3
+  "@testing-library/jest-dom": ^6.6.3
   "@types/jest": ^29.5.14
   "@types/react-dom": ^19.0.4
   "@types/react": ^19.0.12
-  eslint: 9.24.0
-  jest-environment-jsdom: ^29.7.0
-  jest: ^29.7.0
-  next: 15.2.4
-  playwright: 1.51.1
-  postcss: 8.5.3
-  react-dom: ^19.1.0
-  react: ^19.1.0
-  tailwindcss: 4.1.3
-  ts-jest: ^29.3.1
-  ts-node: ^10.9.2
-  tsx: ^4.19.3
-  typescript: 5.8.3
+  "eslint": 9.24.0
+  "jest-environment-jsdom": ^29.7.0
+  "jest": ^29.7.0
+  "next": 15.2.4
+  "playwright": 1.51.1
+  "postcss": 8.5.3
+  "react-dom": ^19.1.0
+  "react": ^19.1.0
+  "tailwindcss": 4.1.3
+  "ts-jest": ^29.3.1
+  "ts-node": ^10.9.2
+  "tsx": ^4.19.3
+  "typescript": 5.8.3
