--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -6,8 +6,8 @@
     "build": "storybook build",
     "check-types": "tsc --noEmit",
     "dev": "storybook dev -p 6006",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "lint": "eslint . --ext .ts,.tsx"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@maw/ui": "workspace:*",
