feat: reintroducing import sorting

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ catalog:
   "@types/jest": ^29.5.14
   "@types/react-dom": ^19.0.4
   "@types/react": ^19.0.12
+  "eslint-plugin-import-x": ^4.10.3
   "eslint": 9.24.0
   "jest-environment-jsdom": ^29.7.0
   "jest": ^29.7.0
