--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -70,7 +70,6 @@
     "@testing-library/jest-dom": "catalog:",
     "@testing-library/react": "^16.2.0",
     "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/jest": "catalog:",
     "@types/lint-staged": "^13.3.0",
     "@types/mdx": "^2.0.13",
@@ -81,7 +80,7 @@
     "@types/rtl-detect": "^1.0.3",
     "@types/sanitize-html": "^2.15.0",
     "eslint": "catalog:",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import-x": "catalog:",
     "eslint-plugin-prettier": "^5.2.5",
     "favicons": "^7.2.0",
     "jest": "catalog:",
