--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,6 +16,7 @@
     "@next/eslint-plugin-next": "^15.2.1",
     "eslint": "catalog:",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import-x": "catalog:",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-react": "^7.37.4",
