fix: turbo lint:fix wrong dep

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
       ]
     },
     "lint:fix": {
-      "dependsOn": ["^lint"],
+      "dependsOn": ["^lint:fix"],
       "cache": false
     },
     "lint": {
