--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepare": "husky",
     "link-assets": "npx symlink-dir ./packages/content-api/data ./apps/web/public/assets/articles",
     "test": "turbo run test",
+    "test:e2e": "turbo run test:e2e",
     "clean": "turbo run clean --force",
     "clean:pnpm": "pnpm store prune",
     "clean:all": "pnpm recursive exec -- rm -rf node_modules dist .next .turbo storybook-static"
