chore: actually ignore build schema files in content-api

--- a/packages/content-api/tsconfig.json
+++ b/packages/content-api/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "@maw/tsconfig/configs/base.json",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "include": [
+    "./scripts/*"
+  ]
 }
