--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
-name: Playwright Tests
+name: Playwright Tests for Web
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -18,7 +18,9 @@ jobs:
     - name: Install dependencies
       run: npm install -g pnpm && pnpm install
     - name: Build the project
-      run: pnpm build
+      run: pnpm build --filter='!@maw/ui-docs'
+    - name: Set working directory
+      run: cd apps/web
     - name: Install Playwright Browsers
       run: pnpm exec playwright install --with-deps
     - name: Run Playwright tests
