--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -83,6 +83,7 @@
     "favicons": "^7.2.0",
     "jest": "catalog:",
     "jest-environment-jsdom": "catalog:",
+    "playwright": "catalog:",
     "postcss": "catalog:",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
