--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,15 +19,13 @@ jobs:
       run: npm install -g pnpm && pnpm install
     - name: Build the project
       run: pnpm run build --filter='!@maw/ui-docs'
-    - name: Set working directory
-      run: cd apps/web
     - name: Install Playwright Browsers
-      run: pnpm exec playwright install --with-deps
+      run: pnpm --filter '@maw/web' exec playwright install --with-deps
     - name: Run Playwright tests for Web
-      run: pnpm run test:e2e
+      run: pnpm --filter '@maw/web' run test:e2e
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: playwright-report/
+        path: apps/web/playwright-report/
         retention-days: 30
