chore: move dep versions into catalog

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,7 +56,6 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "catalog:",
     "@jest/globals": "catalog:",
     "@maw/eslint-config": "workspace:^",
@@ -71,7 +70,7 @@
     "@types/eslint": "^9.6.1",
     "@types/jest": "catalog:",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^22.13.14",
+    "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@types/react-timeago": "^4.1.7",
@@ -79,7 +78,7 @@
     "@types/sanitize-html": "^2.15.0",
     "eslint": "catalog:",
     "eslint-plugin-import-x": "catalog:",
-    "eslint-plugin-prettier": "^5.2.5",
+    "eslint-plugin-prettier": "catalog:",
     "favicons": "^7.2.0",
     "jest": "catalog:",
     "jest-environment-jsdom": "catalog:",
@@ -87,7 +86,7 @@
     "postcss": "catalog:",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sharp": "^0.33.5",
+    "sharp": "catalog:",
     "tailwindcss": "catalog:",
     "ts-jest": "catalog:",
     "ts-node": "catalog:",
