--- a/apps/ui-docs/package.json
+++ b/apps/ui-docs/package.json
@@ -16,25 +16,24 @@
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@maw/eslint-config": "workspace:^",
     "@maw/tsconfig": "workspace:*",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-essentials": "catalog:",
+    "@storybook/addon-interactions": "catalog:",
+    "@storybook/addon-links": "catalog:",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/nextjs": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/test": "^8.6.12",
-    "@types/node": "^20",
+    "@storybook/addon-themes": "catalog:",
+    "@storybook/blocks": "catalog:",
+    "@storybook/nextjs": "catalog:",
+    "@storybook/react": "catalog:",
+    "@storybook/test": "catalog:",
+    "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-storybook": "^0.12.0",
     "postcss": "catalog:",
-    "storybook": "^8.6.12",
+    "storybook": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
