--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,10 +29,10 @@
     "@maw/eslint-config": "workspace:*",
     "@maw/tsconfig": "workspace:*",
     "@maw/utils": "workspace:*",
-    "@storybook/react": "^8.6.12",
-    "@storybook/test": "^8.6.12",
-    "@storybook/types": "^8.6.12",
-    "@types/node": "^22.13.14",
+    "@storybook/react": "catalog:",
+    "@storybook/test": "catalog:",
+    "@storybook/types": "catalog:",
+    "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
