--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,24 +3,37 @@ packages:
   - "packages/*"
 
 catalog:
-  "@eslint/js": 9.24.0
-  "@jest/globals": ^29.7.0
-  "@tailwindcss/postcss": 4.1.3
-  "@testing-library/jest-dom": ^6.6.3
-  "@types/jest": ^29.5.14
-  "@types/react-dom": ^19.0.4
-  "@types/react": ^19.0.12
-  "eslint-plugin-import-x": ^4.10.3
-  "eslint": 9.24.0
-  "jest-environment-jsdom": ^29.7.0
-  "jest": ^29.7.0
-  "next": 15.2.4
-  "playwright": 1.51.1
-  "postcss": 8.5.3
-  "react-dom": ^19.1.0
-  "react": ^19.1.0
-  "tailwindcss": 4.1.3
-  "ts-jest": ^29.3.1
-  "ts-node": ^10.9.2
-  "tsx": ^4.19.3
-  "typescript": 5.8.3
+  "@eslint/js": "9.24.0"
+  "@jest/globals": "^29.7.0"
+  "@storybook/addon-essentials": "^8.6.12"
+  "@storybook/addon-interactions": "^8.6.12"
+  "@storybook/addon-links": "^8.6.12"
+  "@storybook/addon-themes": "^8.6.12"
+  "@storybook/blocks": "^8.6.12"
+  "@storybook/nextjs": "^8.6.12"
+  "@storybook/react": "^8.6.12"
+  "@storybook/test": "^8.6.12"
+  "@storybook/types": "^8.6.12"
+  "@tailwindcss/postcss": "^4.1.4"
+  "@testing-library/jest-dom": "^6.6.3"
+  "@types/jest": "^29.5.14"
+  "@types/node": "^22.13.14"
+  "@types/react-dom": "^19.1.2"
+  "@types/react": "^19.1.2"
+  "eslint-plugin-import-x": "^4.10.5"
+  "eslint-plugin-prettier": "^5.2.5"
+  "eslint": "^9.24.0"
+  "jest-environment-jsdom": "^29.7.0"
+  "jest": "^29.7.0"
+  "next": "^15.3.0"
+  "playwright": "^1.51.1"
+  "postcss": "^8.5.3"
+  "react-dom": "^19.1.0"
+  "react": "^19.1.0"
+  "sharp": "^0.34.1"
+  "storybook": "^8.6.12"
+  "tailwindcss": "^4.1.4"
+  "ts-jest": "^29.3.2"
+  "ts-node": "^10.9.2"
+  "tsx": "^4.19.3"
+  "typescript": "^5.8.3"
